<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".screen.activity.signin.SignInActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hLine_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vLine_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <ImageView
        android:id="@+id/img_signin_banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="0.9"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/signin_vector_bg"
        app:layout_constraintBottom_toTopOf="@id/hLine_signin"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signin_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:letterSpacing="0.05"
        android:padding="@dimen/sizeSixteen"
        android:text="@string/label_signin_top"
        android:textAppearance="@style/MyTextAppearanceBold"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/body_regular"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hLine_signin" />

    <!--Mobile No.-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_signin_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sizeSixteen"
        android:background="@drawable/bg_fill_gray_editext"
        android:drawableStart="@drawable/ic_mobile_phone"
        android:drawablePadding="@dimen/sizeEight"
        android:hint="@string/hint_signin_mobile"
        android:inputType="number"
        android:letterSpacing="0.05"
        android:padding="@dimen/sizeTwelve"
        android:singleLine="true"
        android:textAppearance="@style/MyTextAppearanceBold"
        android:textColor="@color/black"
        android:textColorHint="@color/colorGreyLight"
        android:textSize="@dimen/body_regular"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_signin_label" />

    <!--OTP.-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_signin_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sizeSixteen"
        android:background="@drawable/bg_fill_gray_editext"
        android:drawableStart="@drawable/ic_otp"
        android:drawablePadding="@dimen/sizeEight"
        android:hint="@string/hint_signin_otp"
        android:inputType="number"
        android:letterSpacing="0.5"
        android:maxLength="5"
        android:padding="@dimen/sizeTwelve"
        android:singleLine="true"
        android:textAppearance="@style/MyTextAppearanceBold"
        android:textColor="@color/black"
        android:textColorHint="@color/colorGreyLight"
        android:textSize="@dimen/body_regular"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/edt_signin_mobile" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sizeSixteen"
        android:layout_marginTop="@dimen/sizeThirtyTwo"
        android:layout_marginEnd="@dimen/sizeSixteen"
        android:layout_marginBottom="@dimen/sizeSixteen"
        android:background="@drawable/button_bg_primary"
        android:letterSpacing="0.1"
        android:paddingStart="@dimen/sizeSixteen"
        android:paddingEnd="@dimen/sizeSixteen"
        android:text="@string/hint_signin_send_otp"
        android:textAllCaps="false"
        android:textAppearance="@style/MyTextAppearanceBold"
        android:textColor="@color/white"
        android:textSize="@dimen/body_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_signin_otp" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_signin_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sizeEight"
        android:letterSpacing="0.05"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/sizeEight"
        android:text="@string/label_signin_edit"
        android:textAppearance="@style/MyTextAppearanceBold"
        android:textColor="@color/colorGreyDark"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/edt_signin_mobile"
        app:layout_constraintEnd_toEndOf="@+id/edt_signin_mobile"
        app:layout_constraintTop_toTopOf="@id/edt_signin_mobile" />

</androidx.constraintlayout.widget.ConstraintLayout>